# copernicus_viewer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  clippy.toml
.github/workflows/: ci.yml  release.yml
docs/: TUTORIAL.md
examples/: compare_products.rs  create_sample_zarr.rs
src/: app.rs  branding.rs  demo_capture.rs  file_browser.rs  help_dialog.rs  lib.rs  main.rs  platform.rs  s3_browser.rs  s3_config_dialog.rs
src/comparison/: array_io.rs  compare.rs  data.rs  flags.rs  mod.rs  options.rs  structure.rs
src/display/: footprint.rs  inspector.rs  mod.rs  repr.rs  stac.rs  stats.rs
src/display/map/: land.rs  mod.rs  raster.rs  render.rs
src/plot/: cf_decode.rs  flags.rs  georef.rs  loader.rs  mod.rs  panel.rs  workspace.rs
src/product/: mod.rs  open.rs
src/safe/: io.rs  manifest.rs  mapping.rs  mod.rs  product_type.rs  store.rs
src/safe/resources/config/: S03OLCLRR.json  S03SLSFRP.json  S03SLSLST.json  S03SLSRBT.json  S03SYNV01.json
src/safe/resources/map/: S03OLCEFR.json  S03OLCERR.json  S03OLCLRR.json  S03OLCRAC.json  S03OLCSPC.json  S03SLSFRP.json  S03SLSLST.json  S03SLSRBT.json  S03SYNAOD.json  S03SYNSDR.json  S03SYNV01.json  S03SYNV10.json  S03SYNVGT.json
src/zarr/: creds.rs  download.rs  error.rs  location.rs  mod.rs  runtime.rs  store.rs  tree.rs
tests/: smoke.rs
