[package]
name = "copernicus_viewer"
version = "0.1.0"
edition = "2024"
description = "GUI viewer for EOPF Zarr products"
license = "MIT OR Apache-2.0"
authors = ["Vincent Levasseur"]
readme = "README.md"
repository = "https://github.com/vlevasseur073/copernicus_viewer"
homepage = "https://github.com/vlevasseur073/copernicus_viewer"
keywords = ["zarr", "copernicus", "eopf", "viewer", "gui"]
categories = ["science", "visualization", "gui"]
rust-version = "1.92"
exclude = ["/sample_data/"]

[profile.release]
strip = true

[lib]
name = "copernicus_viewer"
path = "src/lib.rs"

[[bin]]
name = "copernicus_viewer"
path = "src/main.rs"

[features]
default = ["dialog-portal"]
dialog-portal = ["rfd/xdg-portal", "rfd/async-std"]
dialog-gtk = ["rfd/gtk3"]

[dependencies]
anyhow = "1"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wgpu", "x11", "wayland"] }
egui = "0.34"
egui_plot = "0.35"
env_logger = "0.11"
image = "0.25"
log = "0.4"
ndarray = "0.17"
rfd = { version = "0.15", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1.44"
tokio = { version = "1", features = ["rt-multi-thread"] }
zarrs = { version = "0.23", features = ["filesystem", "ndarray", "blosc", "zstd", "gzip", "transpose"] }
zarrs_object_store = { version = "0.6.2", features = ["aws"] }
zarrs_zip = "0.5"

[dev-dependencies]
tempfile = "3.27.0"
