[package]
name = "copernicus_viewer"
version = "0.2.0"
edition = "2024"
description = "GUI viewer and library for inspecting and comparing EOPF Zarr products from the Copernicus ecosystem"
license = "MIT OR Apache-2.0"
authors = ["Vincent Levasseur"]
readme = "README.md"
repository = "https://github.com/vlevasseur073/copernicus_viewer"
homepage = "https://github.com/vlevasseur073/copernicus_viewer"
documentation = "https://docs.rs/copernicus_viewer"
keywords = ["zarr", "copernicus", "eopf", "viewer", "gui"]
categories = ["science", "visualization", "gui"]
rust-version = "1.92"
exclude = ["/sample_data/"]

[profile.release]
strip = true

[lib]
name = "copernicus_viewer"
path = "src/lib.rs"

[[bin]]
name = "copernicus_viewer"
path = "src/main.rs"

[features]
default = ["dialog-portal", "safe"]
dialog-portal = ["rfd/xdg-portal", "rfd/async-std"]
dialog-gtk = ["rfd/gtk3"]
# Sentinel-3 SAFE (.SEN3) support via NetCDF (requires libnetcdf at build time, or netcdf-static).
safe = ["dep:netcdf"]
# Bundle libnetcdf/HDF5/zlib into the binary (cmake required at build time; no runtime install).
netcdf-static = ["netcdf/static"]

[dependencies]
anyhow = "1"
eframe = { version = "0.34", default-features = true, features = ["default_fonts", "glow", "wgpu", "x11", "wayland"] }
egui = "0.34"
egui_plot = "0.35"
futures = "0.3"
env_logger = "0.11"
image = "0.25"
log = "0.4"
ndarray = "0.17"
rfd = { version = "0.15", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1.44"
tokio = { version = "1", features = ["rt-multi-thread"] }
zarrs = { version = "0.23", features = ["filesystem", "ndarray", "blosc", "zstd", "gzip", "transpose"] }
zarrs_object_store = { version = "0.6.2", features = ["aws"] }
zarrs_zip = "0.5"
netcdf = { version = "0.12", features = ["ndarray"], optional = true }
quick-xml = "0.37"

[dev-dependencies]
tempfile = "3.27.0"
